kubernetes/apptest/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  n1-nginx
  namespace: default
  labels:
    app:  n1-nginx
spec:
  selector:
    matchLabels:
      app: n1-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app:  n1-nginx
    spec:
      containers:
      - name:  n1-nginx
        image:  nginx:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  n1-nginx
