kubernetes/apptest/nginx_svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: n1-svc-nginx2
  namespace: default
spec:
  selector:
    app: n1-nginx
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80 
    targetPort: 80 
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
